@@ -35,12 +35,25 @@
                         <colordiffuse>overlay</colordiffuse>
                     </control>
                     <control type="image">
-                        <visible>ListItem.IsPlaying + !player.paused</visible>
+                        <visible>ListItem.IsPlaying + !player.paused + !System.Platform.Linux.RaspberryPi</visible>
                         <posx>12</posx>
                         <posy>0</posy>
                         <width>1-col-gutter</width>
                         <height>1-col-gutter</height>
                         <texture>equaliser.gif</texture>
+                    </control>
+                    <control type="label">
+                        <visible>ListItem.IsPlaying + !player.paused + System.Platform.Linux.RaspberryPi</visible>
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>1-col-textbox</width>
+                        <height>2-row</height>
+                        <align>center</align>
+                        <aligny>center</aligny>
+                        <font>symbolLarge</font>
+                        <textcolor>textActive</textcolor>
+                        <shadowcolor>-</shadowcolor>
+                        <label></label>
                     </control>
                     <control type="label">
                         <visible>ListItem.IsPlaying + player.paused</visible>
@@ -120,12 +133,29 @@
                         <colordiffuse>highlight</colordiffuse>
                     </control>
                     <control type="image">
-                        <visible>ListItem.IsPlaying + !player.paused</visible>
+                        <visible>ListItem.IsPlaying + !player.paused + !System.Platform.Linux.RaspberryPi</visible>
                         <posx>12</posx>
                         <posy>0</posy>
                         <width>1-col-gutter</width>
                         <height>1-col-gutter</height>
                         <texture>equaliser.gif</texture>
+                        <animation type="focus" loop="false" reversible="false">
+                            <effect type="fade" time="500"/>
+                            <effect type="rotatey" end="360" center="33" tween="back" easing="out" time="1000"/>
+                        </animation>
+                    </control>
+                    <control type="label">
+                        <visible>ListItem.IsPlaying + !player.paused + System.Platform.Linux.RaspberryPi</visible>
+                        <posx>0</posx>
+                        <posy>0</posy>
+                        <width>1-col-textbox</width>
+                        <height>2-row</height>
+                        <align>center</align>
+                        <aligny>center</aligny>
+                        <font>symbolLarge</font>
+                        <textcolor>textActive</textcolor>
+                        <shadowcolor>-</shadowcolor>
+                        <label></label>
                         <animation type="focus" loop="false" reversible="false">
                             <effect type="fade" time="500"/>
                             <effect type="rotatey" end="360" center="33" tween="back" easing="out" time="1000"/>
