@@ -87,12 +87,25 @@
                     <colordiffuse>textboxInactive</colordiffuse>
                 </control>
                 <control type="image">
-                    <visible>ListItem.IsPlaying + !player.paused</visible>
+                    <visible>ListItem.IsPlaying + !player.paused  + !System.Platform.Linux.RaspberryPi</visible>
                     <posx>12</posx>
                     <posy>0</posy>
                     <width>1-col-gutter</width>
                     <height>1-col-gutter</height>
                     <texture>equaliser.gif</texture>
+                </control>
+                <control type="label">
+                    <visible>ListItem.IsPlaying + !player.paused  + System.Platform.Linux.RaspberryPi</visible>
+                    <posx>0</posx>
+                    <posy>0</posy>
+                    <width>1-col-textbox</width>
+                    <height>2-row</height>
+                    <align>center</align>
+                    <aligny>center</aligny>
+                    <font>symbolLarge</font>
+                    <textcolor>textActive</textcolor>
+                    <shadowcolor>-</shadowcolor>
+                    <label></label>
                 </control>
                 <control type="label">
                     <visible>ListItem.IsPlaying + player.paused</visible>
@@ -189,12 +202,25 @@
                     <include>spinFocusIcon</include>
                 </control>
                 <control type="image">
-                    <visible>ListItem.IsPlaying + !player.paused</visible>
+                    <visible>ListItem.IsPlaying + !player.paused  + !System.Platform.Linux.RaspberryPi</visible>
                     <posx>12</posx>
                     <posy>0</posy>
                     <width>1-col-gutter</width>
                     <height>1-col-gutter</height>
                     <texture>equaliser.gif</texture>
+                </control>
+                <control type="label">
+                    <visible>ListItem.IsPlaying + !player.paused  + System.Platform.Linux.RaspberryPi</visible>
+                    <posx>0</posx>
+                    <posy>0</posy>
+                    <width>1-col-textbox</width>
+                    <height>2-row</height>
+                    <align>center</align>
+                    <aligny>center</aligny>
+                    <font>symbolLarge</font>
+                    <textcolor>textActive</textcolor>
+                    <shadowcolor>-</shadowcolor>
+                    <label></label>
                 </control>
                 <control type="label">
                     <visible>ListItem.IsPlaying + player.paused</visible>
