@@ -19,12 +19,25 @@
                 <colordiffuse>highlight</colordiffuse>
             </control>
             <control type="image">
-                <visible>!player.paused</visible>
+                <visible>!player.paused + !System.Platform.Linux.RaspberryPi</visible>
                 <posx>12</posx>
                 <posy>0</posy>
                 <width>1-col-gutter</width>
                 <height>1-col-gutter</height>
                 <texture>equaliser.gif</texture>
+            </control>
+            <control type="label">
+                <visible>!player.paused + System.Platform.Linux.RaspberryPi</visible>
+                <posx>3</posx>
+                <posy>0</posy>
+                <width>1-col-textbox</width>
+                <height>2-row</height>
+                <align>center</align>
+                <aligny>center</aligny>
+                <font>symbolLarge</font>
+                <textcolor>textActive</textcolor>
+                <shadowcolor>-</shadowcolor>
+                <label></label>
             </control>
             <control type="label">
                 <visible>player.paused</visible>
